# veo3-fal-video-ai

./: .cursorrules  .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  README_veo3.md  pyproject.toml  reorganize_packages.py  repository_organization_guide.md  requirements-minimal.txt  requirements.txt  setup.py  test_mcp_full.py  test_mcp_functionality.py  test_package_basic.py  test_simple_pipeline.py  test_startup.py  veo_video_generation.py
.cursor/: .cursorrules
.cursor/rules/: api-reference.mdc  cost-protection.mdc  development-guidelines.mdc  fal-ai-implementation.mdc  permission-fixes.mdc  project-overview.mdc  setup-and-configuration.mdc  testing-and-demo.mdc  troubleshooting.mdc  video-analyzer-tools.mdc
.github/workflows/: publish.yml  test.yml
ai_content_pipeline/: chain_result.json  requirements.txt  result.json  test_audio_step_only.py  test_backward_compatibility.py  test_video_audio_flow.py
ai_content_pipeline/ai_content_pipeline/: __main__.py
ai_content_pipeline/docs/: README.md
ai_content_pipeline/examples/: artistic_video_creation.yaml  complete_content_pipeline.yaml  direct_gemini_analysis.py  direct_openrouter_prompts.py  realistic_documentary_style.yaml
ai_content_pipeline/input/: README.md  analysis_ocr_direct.yaml  artistic_transformation_chain.yaml  artistic_video_creation.yaml  cheap_video_chain.yaml  cheap_video_chain_no_prompt.yaml  cheap_video_prompt.txt  detailed_image_analysis.yaml  image_analysis_chain.yaml  image_artistic_transform.yaml  image_enhance_to_video.yaml  image_enhancement_chain.yaml  image_enhancement_prompt.txt  image_prompt_video_workflow.yaml  intelligent_content_chain.yaml  realistic_documentary_style.yaml  run_tts_basic.sh  run_tts_demo.sh  simple_artistic_video.yaml  simple_hailuo_chain.yaml  smart_prompt_image_video.yaml  test_openrouter_integration.yaml  tts_basic_test.yaml  tts_cli_demo.yaml  video_budget_hailuo.yaml  video_budget_superwomen.yaml
fal_avatar_generation/: README.md  demo.py  fal_avatar_generator.py  requirements.txt  test_generation.py
fal_image_to_image/: README.md  demo.py  fal_image_to_image_generator.py  setup.py  test_reframe_endpoint.py  test_reframing_debug.py
fal_image_to_image/fal_image_to_image/: __main__.py  generator.py
fal_image_to_image/tests/: test_batch_cli.sh  test_flux_kontext_cli.sh  test_generation.py  test_package_structure.py  test_photon_cli.sh  test_setup.py
fal_image_to_video/: demo.py  fal_image_to_video_generator.py  requirements.txt  test_api_only.py  test_fal_ai.py
fal_image_to_video/test/: test_api_only.py  test_fal_ai.py
fal_text_to_image/: CURSOR_TESTING_GUIDE.md  MCP_SERVER.md  __main__.py  demo.py  fal_text_to_image_generator.py  mcp_config.json  mcp_server.py  requirements.txt  test_api_only.py  test_cursor_mcp.py  test_dragon_generation.py  test_generation.py  test_mcp.py  test_mcp_dragon.py  test_mcp_full.py  test_mcp_functionality.py  test_mcp_server.py  test_setup.py  test_startup.py  test_text_to_image.py  update_cursor_mcp.py
fal_text_to_image/test/: test_all_models.sh  test_flux_dev.sh  test_flux_schnell.sh  test_generation.py  test_imagen4.py  test_imagen4.sh  test_model_comparison.sh  test_seedream.py  test_seedream.sh  test_setup.sh  test_setup_new.py
fal_text_to_video/: requirements.txt  test_generation.py
fal_video_generation/: .env.example  README.md  api_test.py  comparison_guide.py  demo.py  fal_video_generator.py  quick_test.py  requirements.txt  test_api_only.py  test_fal_ai.py  test_setup.py
fal_video_to_video/: .gitignore  setup.py
fal_video_to_video/fal_video_to_video/: __main__.py  generator.py
fal_video_to_video/tests/: test_topaz_upscale.sh
input/: FILE_INDEX.md
input/metadata/: sample_video_description.json
input/pipelines/: text_to_speech_test.yaml  tts_simple_test.yaml
input/text/: sample-0_transcription.txt  sample_video_description.txt  test_input.txt
requirements/: dev.txt  fal.txt  google.txt  tts.txt
tests/: README.md  quick_test.sh  run_all_tests.py  test_core.py  test_integration.py  test_package_demo.py  test_package_final.py  test_package_minimal.py  test_simple_pipeline.py
text_to_speech/: .env.example  .gitignore  README.md  activate_env.sh  elevenlabs_dialogue_controller.py  elevenlabs_tts_controller.py  example_usage.py  interactive_pipeline.py  openrouter_tts_pipeline.py  quick_start.py  requirements.txt  text_to_dialogue_script.py
text_to_speech/cli/: __init__.py  quick_start.py
veo3_video_generation/: .env.example  README.md  demo.py  fix_permissions.py  requirements.txt  test_veo.py  veo_video_generation.py
video_tools/: .env.example  .gitignore  README.md  cut_video_first_5_seconds.py  image_modify_verify.py  real_video_examples.py  requirements_gemini.txt  run_quick_tests.py  test_backward_compatibility.py  test_enhanced_architecture.py  test_enhanced_video_processor.py  test_env_setup.py  test_image_workflow.py  test_subtitles.py  test_video_understanding.py  video_audio_utils.py  video_audio_utils_original.py
(+56 files in other folders)
